--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,8 @@ bevy_light_2d = "0.7.0"
 bevy_rapier2d = { version = "0.30.0", features = ["simd-stable"] }
 chrono = "0.4.41"
 rand = "0.9.2"
-serde = "1.0.219"
+serde = { version = "1.0.219", features = ["derive"] }
+ron = "0.8.1"
 
 # Performance optimizations
 [profile.release]
