--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ chrono = "0.4.41"
 rand = "0.9.2"
 serde = { version = "1.0.219", features = ["derive"] }
 ron = "0.8.1"
+dirs = "5.0"
 
 # Performance optimizations
 [profile.release]
