--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ bevy_audio = "0.16.1"
 bevy_enhanced_input = "0.18.0"
 bevy_light_2d = "0.7.0"
 bevy_rapier2d = { version = "0.30.0", features = ["simd-stable"] }
-# bevy_hanabi = "0.16" # Temporarily disabled pending version compatibility
+bevy_hanabi = "0.16"
 chrono = "0.4.41"
 rand = "0.9.2"
 serde = { version = "1.0.219", features = ["derive"] }
