--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "avian_haven"
 version = "0.1.0"
 edition = "2024"
+include = ["src/**/*"]
 
 [dependencies]
 bevy = { version = "0.16.1", features = ["dynamic_linking"] }
